Expand Mask: Inverted fill on mesh islands #104022

Closed
opened 2023-01-20 12:27:07 +01:00 by Julien Kaspar · 10 comments
Member

(NOTE) This task is part of the community & sub tasks of the workboard. Anyone is free to pick up this task and contribute. For any questions or needed reviewers, please tag @JosephEagar and @JulienKaspar.

When using the operator "Expand Mask by Topology" via Shift A you can fill the entire connected mesh island by moving the cursor outside of the bounds of the object.
The mesh island is always filled with a mask value of 1.

The issue is that when using the modal shortcut F to invert the effect, it doesn't do anything yet.
This task is about changing the behavior to fill the mesh island with a mask value of 0 if the operation is inverted.

(NOTE) This task is part of the community & sub tasks of the workboard. Anyone is free to pick up this task and contribute. For any questions or needed reviewers, please tag @JosephEagar and @JulienKaspar. When using the operator "Expand Mask by Topology" via `Shift A` you can fill the entire connected mesh island by moving the cursor outside of the bounds of the object. The mesh island is always filled with a mask value of 1. The issue is that when using the modal shortcut `F` to invert the effect, it doesn't do anything yet. This task is about changing the behavior to fill the mesh island with a mask value of 0 if the operation is inverted.
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @JulienKaspar, @JosephEagar

Added subscribers: @JulienKaspar, @JosephEagar

Added subscriber: @Pratyaksh-Raj

Added subscriber: @Pratyaksh-Raj

Hello , I want to work on this issue .
by using "Invert Mask" operator, which is accessed through the Shift-Ctrl-I shortcut which change mask value from 1 - 0 and vice versa and it can also be done by manually .
so @JosephEagar will you please guide me here what I need to do?

Hello , I want to work on this issue . by using "Invert Mask" operator, which is accessed through the Shift-Ctrl-I shortcut which change mask value from 1 - 0 and vice versa and it can also be done by manually . so @JosephEagar will you please guide me here what I need to do?
Author
Member

@Pratyaksh-Raj Inverting the mask has a very different effect, because it inverts the currently existing mask.
When inverting the Expand Mask operator the purpose is to set a mask value of 0 on the expanded area.

@Pratyaksh-Raj Inverting the mask has a very different effect, because it inverts the currently existing mask. When inverting the Expand Mask operator the purpose is to set a mask value of 0 on the expanded area.
Julien Kaspar added this to the Sculpt, Paint & Texture project 2023-02-08 10:48:52 +01:00
Philipp Oeser removed the
Interest
Sculpt, Paint & Texture
label 2023-02-10 09:10:53 +01:00

Is this issue fixed? @JulienKaspar cause when I tried doing the shift+A and then pressing F it does erase the selection

Is this issue fixed? @JulienKaspar cause when I tried doing the `shift+A` and then pressing `F` it does erase the selection

hey, so I'm trying to fix this bug, and I have a couple of doubts:
1. what is a mesh island? I googled it, and I came across the mesh island node documentation, and over there it says that mesh islands are separate connected regions of a mesh. Can anyone expand on that?
2. While trying to reproduce this issue, I am using the Expand Mask by Topology operator and inverting by pressing F, it does get inverted? Does it have to do with the cursor being out of bounds while I invert it?

mesh before applying any masks:

Screenshot (124)

applying the Expand Mask by Topology operator while staying inside the bounds of the object:

Screenshot (125)

inverting the operator by pressing F:

Screenshot (126)

this is what is seen by going out of bounds regardless of whether the mask is inverted or not:

Screenshot (127)

hey, so I'm trying to fix this bug, and I have a couple of doubts: 1. what is a mesh island? I googled it, and I came across the mesh island node documentation, and over there it says that mesh islands are separate connected regions of a mesh. Can anyone expand on that? 2. While trying to reproduce this issue, I am using the Expand Mask by Topology operator and inverting by pressing F, it does get inverted? Does it have to do with the cursor being out of bounds while I invert it? ## mesh before applying any masks: ![Screenshot (124)](/attachments/dd174af4-5e36-46d6-94a3-b4bf672498d6) ## applying the Expand Mask by Topology operator while staying inside the bounds of the object: ![Screenshot (125)](/attachments/0a15c37d-e196-41fe-b929-56c01a66e42f) ## inverting the operator by pressing F: ![Screenshot (126)](/attachments/59208f04-40c0-451c-bc24-7cbeb4d97cd4) ##### ## this is what is seen by going out of bounds regardless of whether the mask is inverted or not: ![Screenshot (127)](/attachments/7e87807c-e125-459d-813a-95d138a06e3c)

as @nainilnandu mentioned, is this issue fixed? @JulienKaspar

if not, the issue seems to be a bit unclear to me. It would be kind of you to expand (no pun intended) on this a bit more, so that I could understand the issue better. Thank you!

as @nainilnandu mentioned, is this issue fixed? @JulienKaspar if not, the issue seems to be a bit unclear to me. It would be kind of you to expand (no pun intended) on this a bit more, so that I could understand the issue better. Thank you!
Author
Member

@nainilnandu @Piyush-Aniruddha-Udhao FYI I'm unavailable for the month of March. Reach out to @JosephEagar for info and help 👍

About the questions:

what is a mesh island?

You're right. A mesh island is all geometry that is connected to each other.

While trying to reproduce this issue, I am using the Expand Mask by Topology operator and inverting by pressing F, it does get inverted? Does it have to do with the cursor being out of bounds while I invert it?

Your example images seem to be wrong. Please make sure to use the latest version of Blender main and factory preferences.

The default expansion should be a mask value 1 (dark). If inverted with F, the expansion will be a mask value of 0 (light), which is essentially like subtracting a mask.

When starting an expansion and moving the cursor outside of the surface of the object, the mesh island will be filled with a mask value 1.
If the expansion is inverted with F, it should fill the mesh island with a mask value of 0,
but the issue is that it will fail to do anything.

@nainilnandu @Piyush-Aniruddha-Udhao FYI I'm unavailable for the month of March. Reach out to @JosephEagar for info and help 👍 About the questions: > what is a mesh island? You're right. A mesh island is all geometry that is connected to each other. > While trying to reproduce this issue, I am using the Expand Mask by Topology operator and inverting by pressing F, it does get inverted? Does it have to do with the cursor being out of bounds while I invert it? Your example images seem to be wrong. Please make sure to use the latest version of Blender main and factory preferences. The default expansion should be a mask value 1 (dark). If inverted with `F`, the expansion will be a mask value of 0 (light), which is essentially like subtracting a mask. When starting an expansion and moving the cursor outside of the surface of the object, the mesh island will be filled with a mask value 1. If the expansion is inverted with `F`, it should fill the mesh island with a mask value of 0, but the issue is that it will fail to do anything.

Okay, I will update blender and try and replicate this issue! Thanks for the clarification.

Okay, I will update blender and try and replicate this issue! Thanks for the clarification.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-30 09:29:03 +02:00
Julien Kaspar removed this from the Sculpt, Paint & Texture project 2023-10-02 17:39:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104022
No description provided.