source/blender/editors/sculpt_paint/sculpt_expand.cc
@@ -233,6 +233,9 @@ static bool sculpt_expand_state_get(SculptSession *ss,
   }
 
   if (expand_cache->all_enabled) {
+    if (expand_cache->invert) {
+      return false;
+    }
     return true;
   }
 
@@ -279,6 +282,9 @@ static bool sculpt_expand_face_state_get(SculptSession *ss, ExpandCache *expand_
   }
 
   if (expand_cache->all_enabled) {
+    if (expand_cache->invert) {
+      return false;
+    }
     return true;
   }
 
